packages/forge-dsl/fixtures/errors/e17-unterminated-comment.fable
// expect: FORGE003
-> go

=== go ===
Fine so far.
/* this comment never ends
-> END
